# poe2-build-mcp

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  PACKAGING.md  PLAN.md  README.md  bi.json  ex.json  manifest.json  pg.html  pyproject.toml  s.json
.github/workflows/: ci.yml  refresh-data.yml  release.yml
data/: reference_builds.json
docs/: build-optimizer-spec.md
pipeline/: __init__.py  build_corpus.py  build_reference_builds.py  reference_builds_seed.txt  wiki.py
pob/: PINNED.md  pob_headless.lua  spike_dps.lua  spike_headless.lua
pob/patches/: 0001-split-personality-alternate-class-starts.patch
scripts/: build_bundle.py  make_icon.py  recon_repoe.py  recon_repoe2.py  smoke_compute.py  smoke_corpus.py  smoke_import.py  smoke_live.py  smoke_m3.py  smoke_mcp.py  smoke_mcp_client.py  smoke_optimize.py  smoke_passives.py
server/: ASSISTANT_GUIDE.md  BUILD_ADVICE.md  __init__.py  main.py  paths.py  scaffold.py
server/compute/: __init__.py  buildopt.py  craftopt.py  engine.py  itemopt.py  pob_code.py  skilltext.py  solver.py  supportopt.py
server/knowledge/: __init__.py  advice.py  db.py  itemparse.py  mechanics.py  refbuilds.py
server/live/: __init__.py  meta.py  prices.py  update.py  version.py  wiki.py
tests/: conftest.py  test_compute.py  test_corpus.py  test_passives.py  test_refbuilds.py  test_server.py  test_skilltext.py  test_update.py
tests/fixtures/: witchhunter_detonate.pobcode
